--- a/FreeTime/packages.config
+++ b/FreeTime/packages.config
@@ -4,6 +4,7 @@
   <package id="AspNet.ScriptManager.bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="AspNet.ScriptManager.jQuery" version="1.10.2" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="Corrected.Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1358.0" targetFramework="net461" />
   <package id="Dropbox.Api" version="4.9.3" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
@@ -24,6 +25,8 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.WebForms" version="150.1484.0" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="NewsAPI" version="0.5.0" targetFramework="net461" />
